--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Felicia's Personal Website</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     
     <body>
@@ -20,9 +21,8 @@
             <h1 class = "page-title">Main</h1>
 
             <div class = "about">
-                <div class = "about-pic"></div>
+                <div class = "about-pic"><img></div>
                 <div class = "about-text">
-            
                     <p>3rd Year Computer Science Student at California Polytechnic State University - San Luis Obispo</p>
                 </div>
             </div>
