--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </nav>
         
         <main>
-            <h1 class = "page-title">Main</h1>
+            <h1 class = "page-title">Home</h1>
 
             <div class = "about">
-                <div class = "about-pic"><img></div>
+                <div class = "about-pic"><img class = "profile-pic" src = "profile.JPG"></div>
                 <div class = "about-text">
                     <p>3rd Year Computer Science Student at California Polytechnic State University - San Luis Obispo</p>
                 </div>
