--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
             <div class = "project">
                 <a href = "index.html"><img src = ""></a>
                 <div class = "prject-details">
-                    <p class = "project-name"><strong>Felicia's Project</strong></p>
-                    <p class = "project-description">cool stuff</p>
+                    <p class = "project-name"><strong>TO BE UPDATED</strong></p>
+                    <p class = "project-description">:p</p>
                     <a href = "index.html">Learn More</a>
                 </div>
             </div>
