--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
         
         <main>
             <h1 class = "page-title">Blog</h1>
+            <h2>to be updated:P</h2>
         </main>
 
         <footer class = "footer">
