--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,8 @@
             </ul>
         </nav>
         <main>
-            <h1 class = "page-title">Resume</h1>
-            <a href="resume.pdf" download >Download Resume</a>
-
+            <h1 class = "resume-title">Resume</h1>
+         
             <div class = "resume">
                 <section class = "section">
                     <h2 class = "section-title">Education</h2>
